<resources>
    <string name="app_name">Messenger</string>
    <string name="title_activity_chat_select">ChatSelectActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="public_chat">public_chat</string>
    <string name="none_encryption_description">There is no encryption for this dialog. All messages are stored on the server in unencrypted form and are accessible from any authorized device.</string>
    <string name="cloud_encryption_description">This dialog uses hybrid encryption. All messages are encrypted with a unique secret dialogue AES key and stored on the server. Available on any authorized device.</string>
    <string name="local_encryption_description">This dialog uses hybrid end-to-end encryption. Each message is encrypted with its own unique secret AES key, which is encrypted with the user`s public RSA key. Messages are stored on the server only until they are received by the user. After receiving the message, it is deleted from the server and stored only in local storage. This dialog is available ONLY on this device and ONLY for the current session.</string>
    <string name="wipe_alert">This action will delete all local data. All private conversations cannot be restored after that. The application will close and re-authorization will be required. Use only if the application does not work correctly.</string>
    <string name="info_name">Here you can change your name on the messenger. It will be visible to all users. Name must contains at least 6 characters.</string>
    <string name="info_email">Here you can change your email address. The new address will be used for authorization and password recovery. A password confirmation is required to change the email. Password must contains at least 6 characters.</string>
    <string name="info_pass">Here you can change your password. The new password will be used for authorization. A password confirmation is required to this action.</string>
    <string name="select_user_hint">Select user to dialog by tap, or select multiple users by long tap and press start new chat</string>
    <string name="account">Account</string>
    <string name="dialogs">Dialogs</string>
    <string name="change_email">Change email</string>
    <string name="resend_email">resend email</string>
    <string name="sign_out">sign out</string>
    <string name="change_photo">Change photo</string>
    <string name="click_here_for_change_your_name">Click here for change your name</string>
    <string name="click_here_for_change_password">Click here for change password</string>
    <string name="click_here_for_change_email">Click here for change email</string>
    <string name="clear_local_db">Clear local db</string>
    <string name="delete_my_account">Delete my account</string>
    <string name="reload_fb_debug">Reload FB(debug)</string>
    <string name="meow_messenger">Meow messenger</string>
    <string name="email">Email</string>
    <string name="example_mail_ru">example@mail.ru</string>
    <string name="name">Name</string>
    <string name="pashka">Enter your name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">sign in</string>
    <string name="not_sign_up_yet">not sign up yet?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="start_new_chat">Start new chat</string>
    <string name="message">Message</string>
    <string name="chat_name">Chat name</string>
    <string name="select_encryption_type">Select encryption type</string>
    <string name="no_encryption">No encryption</string>
    <string name="cloud_storage_encryption">Cloud storage encryption</string>
    <string name="local_storage_encryption">Local storage encryption</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="enter_your_new_password">Enter your new password</string>
    <string name="enter_new_name">Enter new name</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="confirm">Confirm</string>
    <string name="last_online">Last online</string>
    <string name="encryption_type">Encryption type:  </string>
    <string name="add_user">Add user</string>
    <string name="users">Users:</string>
    <string name="chat_creator">Chat creator:</string>
</resources>
