<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chat_name"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_encryption_type"
        android:textSize="20sp"
        android:layout_marginTop="10dp"/>

    <RadioGroup
        android:id="@+id/radio_select_encryption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_encryption"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_cloud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cloud_storage_encryption"
            android:textSize="16sp" />

        <RadioButton
            android:id="@+id/radio_local"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/local_storage_encryption"
            android:textSize="16sp" />
    </RadioGroup>

</LinearLayout>