<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainWhite"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Authentication.SignUpFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="10dp"
            app:cardBackgroundColor="@color/colorCardViewSign"
            app:cardCornerRadius="20dp"
            app:cardElevation="0dp"
            app:contentPadding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0"
                    android:text="@string/email"
                    android:textColor="#787878"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0"
                    android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ@_-.abcdefghijklmnopqrstuvwxyz1234567890"
                    android:ems="10"
                    android:hint="@string/example_mail_ru"
                    android:inputType="textEmailAddress"
                    android:maxLength="40"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/password"
                    android:textColor="#787878"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_weight="0"
                    android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбю-_ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890"
                    android:ems="10"
                    android:hint="@string/enter_your_password"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:nestedScrollingEnabled="true"
                    android:singleLine="true"
                    android:textSize="16sp" />

                <Button
                    android:id="@+id/button4"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0"
                    android:text="@string/sign_in"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="0"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button5"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/not_sign_up_yet"
                        android:textSize="14sp" />

                    <Button
                        android:id="@+id/button6"
                        style="@style/Widget.AppCompat.Button.Borderless.Colored"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/forgot_password"
                        android:textSize="14sp" />
                </LinearLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>