<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".UserCabinet.ChangeUserInfoFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/user_cabinet_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:textAlignment="inherit"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/user_cabinet_input_old_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбюABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                android:ems="10"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true" />

            <EditText
                android:id="@+id/user_cabinet_input_new_pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбюABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                android:ems="10"
                android:hint="@string/enter_your_new_password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:singleLine="true" />

            <EditText
                android:id="@+id/user_cabinet_input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:digits="ЙЦУКЕНГШЩЗХЪФЫВАПРОЛДЖЭЯЧСМИТЬБЮйцукенгшщзхъфывапролджэячсмитьбюABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz1234567890 "
                android:ems="10"
                android:hint="@string/enter_new_name"
                android:inputType="textPersonName"
                android:maxLength="15"
                android:singleLine="true" />

            <EditText
                android:id="@+id/user_cabinet_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_weight="0"
                android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ@.abcdefghijklmnopqrstuvwxyz1234567890 "
                android:ems="10"
                android:hint="@string/enter_new_email"
                android:inputType="textEmailAddress"
                android:maxLength="20"
                android:singleLine="true" />

            <Button
                android:id="@+id/button11"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:text="@string/confirm"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>